@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-27T16:16:38Z",
+  "timestamp" : "2022-06-28T01:05:07Z",
   "count_outdated" : 360,
   "uniques_outdated" : 194,
-  "count" : 384,
+  "count" : 385,
   "uniques" : 209,
   "clones" : [
     {
@@ -91,8 +91,8 @@
     },
     {
       "timestamp": "2022-06-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
