@@ -1,3 +1,10 @@
+2022-06-28T01:05:07Z:
+* notice: last 14d: unq all: 3 25
+* notice: prev accum: outdated-unq outdated-all / unq all: 194 360 / 209 384
+* notice: next accum: outdated-unq outdated-all / unq all: 194 360 / 209 385
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-06-27]
+
 2022-06-27T16:16:38Z:
 * notice: last 14d: unq all: 3 24
 * notice: prev accum: outdated-unq outdated-all / unq all: 193 358 / 209 383
